DB-1697 JVM Changes to aid in GC pauses per Salesforce and MapR